# flutter1

./: .gitignore  LICENSE.md  README.md  pubspec.yaml
android/: build.gradle
android/app/: build.gradle  google-services.json
assets/images/: desktop.ini
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  steps.dart
lib/DataHistory/: caloriesAndDaysChart.dart  drinkWater.dart  exercisesCalendar.dart  stepsCalendar.dart
lib/data/: Onboarding.dart  chatkeys.dart  setup.dart  workout.dart
lib/exercisesTutorial/: burpee.dart  exercisesTutorial.dart  jumping.dart  lungeExercise.dart  plankExercise.dart  russianTwist.dart  squatsExercise.dart
lib/models/: Exercises.dart  Message.dart  Setup.dart  (+7 more)
linux/: CMakeLists.txt  my_application.cc
smartwatch/sensors+design/: CMakeLists.txt  SquareLine_Project.sll  SquareLine_Project.spj  filelist.txt  lilygoDesign.ino  stepcounter.h  time_data.h  time_functions.h  ui.c  ui.h  ui_Screen1.c  ui_Screen10.c  ui_Screen11.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c  ui_Screen9.c  ui_font_Font1.c  ui_font_Font10.c  ui_font_Font11.c  ui_font_Font2.c  ui_font_Font3.c  ui_font_Font4.c  ui_font_Font5.c  ui_font_Font6.c  ui_font_Font7.c  ui_font_Font8.c  ui_font_Font9.c  ui_img_1993735377.c  ui_img_250249727.c  ui_img_glass_thermometer_png.c  ui_img_group_1_png.c  ui_img_group_289_png.c  ui_img_group_290_png.c  ui_img_group_2_png.c  ui_img_heart_with_pulse_png.c  (+9 more)
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+80 files in other folders)
