SET(SOURCES ui_Screen1.c
    ui_Screen2.c
    ui_Screen3.c
    ui_Screen4.c
    ui_Screen5.c
    ui_Screen6.c
    ui_Screen7.c
    ui_Screen8.c
    ui_Screen9.c
    ui_Screen10.c
    ui_Screen11.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_group_289_png.c
    ui_img_group_1_png.c
    ui_img_vector_png.c
    ui_img_1993735377.c
    ui_img_glass_thermometer_png.c
    ui_img_location_icon_png.c
    ui_img_timer_png.c
    ui_img_to_do_png.c
    ui_img_heart_with_pulse_png.c
    ui_img_pulse_oximeter_png.c
    ui_img_250249727.c
    ui_img_temp_png.c
    ui_img_p_png.c
    ui_img_group_2_png.c
    ui_img_group_290_png.c
    ui_img_spo2_png.c
    ui_temporary_image.c
    fonts/ui_font_Font1.c
    fonts/ui_font_Font10.c
    fonts/ui_font_Font11.c
    fonts/ui_font_Font2.c
    fonts/ui_font_Font3.c
    fonts/ui_font_Font4.c
    fonts/ui_font_Font5.c
    fonts/ui_font_Font6.c
    fonts/ui_font_Font7.c
    fonts/ui_font_Font8.c
    fonts/ui_font_Font9.c)

add_library(ui ${SOURCES})
